<resources>
    <string name="actfm_picture_clear">Clear Picture</string>
    <string name="TVA_add_comment">Add a comment...</string>
    <string name="name">Name</string>
    <string name="enter_tag_name">Enter tag name</string>
    <string name="enter_filter_name">Enter filter name</string>
    <string name="choose_google_account">Choose Google Account</string>
    <string name="backup_BPr_header">Backups</string>
    <string name="backup_BAc_import">Import tasks</string>
    <string name="backup_BAc_export">Export tasks</string>
    <string name="export_toast">Backed up %1$s to %2$s.</string>
    <string name="export_toast_no_tasks">No tasks to export.</string>
    <string name="import_summary_title">Restore summary</string>
  <string name="import_summary_message">
File %1$s contained %2$s.\n\n
%3$s imported,\n
%4$s already exist\n
%5$s had errors\n
  </string>
    <string name="import_progress_read">Reading task %d...</string>
    <string name="DLG_error_sdcard">Cannot access folder: %s</string>
    <string name="DLG_error_sdcard_general">Cannot access your SD card!</string>
    <string name="import_file_prompt">Select a file to restore</string>
    <string name="read_permission_label">Tasks Permission</string>
    <string name="write_permission_label">Tasks Permission</string>
    <string name="DLG_delete_this_task_question">Delete this task?</string>
    <string name="DLG_upgrading">Upgrading your tasks...</string>
    <string name="DLG_hour_minutes">Time (hours : minutes)</string>
    <string name="DLG_undo">Undo</string>
    <string name="WID_dateButtonUnset">Click to set</string>
    <string name="TLA_no_items">You have no tasks! \n Want to add something?</string>
    <string name="TLA_menu_sort">Sort</string>
    <string name="TLA_menu_search">Search</string>
    <string name="TLA_menu_settings">Settings</string>
    <string name="TAd_hiddenFormat">%s [hidden]</string>
    <string name="TAd_deletedFormat">%s [deleted]</string>
    <string name="TAd_completed">Finished\n%s</string>
    <string name="TAd_actionEditTask">Edit</string>
    <string name="TAd_contextCopyTask">Copy Task</string>
    <string name="TAd_contextDeleteTask">Delete Task</string>
    <string name="TAd_contextUndeleteTask">Undelete Task</string>
    <string name="TAd_contextPurgeTask">Purge Task</string>
    <string name="SSD_sort_drag">Manual order with subtasks</string>
    <string name="SSD_sort_auto">Smart sort</string>
    <string name="SSD_sort_alpha">By title</string>
    <string name="SSD_sort_due">By due date</string>
    <string name="SSD_sort_importance">By priority</string>
    <string name="SSD_sort_modified">By last modified</string>
    <string name="FLA_search_filter">Matching \'%s\'</string>
    <string name="FLA_new_filter">New Filter</string>
    <string name="FLA_no_filter_selected">No filter selected! Please select a filter or list.</string>
    <string name="TEA_title_hint">Task name</string>
    <string name="TEA_importance_label">Priority</string>
    <string name="TEA_no_date">No date</string>
    <string name="TEA_hideUntil_label">Hide until</string>
    <string name="TEA_hideUntil_display">Hide until %s</string>
    <string name="TEA_note_label">Description</string>
    <string name="TEA_estimatedDuration_label">How long will it take?</string>
    <string name="TEA_elapsedDuration_label">Time already spent</string>
    <string name="TEA_menu_save">Save Changes</string>
    <string name="save">Save</string>
    <string name="TEA_menu_discard_changes">Discard changes</string>
    <string name="TEA_tab_activity">Activity</string>
    <string name="TEA_timer_est">Est. %s</string>
    <string name="TEA_timer_elap">Elapsed %s</string>
    <string name="TEA_no_time">No time</string>
    <string-array name="TEA_hideUntil">
        
        <item>Never</item>
        <item>Due date</item>
        <item>Due time</item>
        <item>Day before due</item>
        <item>Week before due</item>
        <item>Specific day/time</item>
    </string-array>
    <string name="TEA_control_when">When</string>
    <string name="TEA_control_repeat">Repeat</string>
    <string name="TEA_control_gcal">Calendar</string>
    <string name="TEA_control_importance">Priority</string>
    <string name="TEA_control_notes">Description</string>
    <string name="TEA_control_files">Files</string>
    <string name="TEA_control_reminders">Reminders</string>
    <string name="TEA_control_timer">Timer Controls</string>
    <string name="TEA_control_hidden_section">----Hide Always----</string>
    <string name="hide_until_prompt">Show in my list</string>
    <string name="TEA_load_more">Load more...</string>
    <string name="missed_call">Missed call from %s</string>
    <string name="MCA_return_call">Call now</string>
    <string name="MCA_add_task">Call later</string>
    <string name="MCA_ignore">Ignore</string>
    <string name="missed_calls">Missed Calls</string>
    <string name="MCA_task_title_name">Call %1$s back at %2$s</string>
    <string name="MCA_task_title_no_name">Call %s back</string>
    <string name="CRA_ignore">Ignore</string>
    <string name="CRA_title">Need a meeting list?</string>
    <string name="CRA_ignore_body">You\'ve ignored several calendar events. Should Tasks stop asking you about them?</string>
    <string name="CRA_ignore_all">Ignore all events</string>
    <string name="CRA_ignore_this">Ignore this event only</string>
    <string name="CRA_speech_bubble_start">Looks like %s is starting soon. Want to create a list for action items?</string>
    <string name="CRA_speech_bubble_end">Looks like you just finished with %s. Want to create a list for action items?</string>
    <string name="CRA_create_list">Create list</string>
    <string name="CRA_postpone">Maybe afterwards</string>
    <string name="CRA_list_exists_body">A list named %s already exists. Do you want to use the existing list or create a new one for this event?</string>
    <string name="CRA_create_new">Create new</string>
    <string name="CRA_use_existing">Use existing</string>
    <string name="CRA_created_list_dialog">I created a list %s.</string>
    <string name="CRA_one_attendee">%s is attending.</string>
    <string name="CRA_two_attendees">%1$s and %2$s are attending.</string>
    <string name="CRA_many_attendees">%1$s, %2$s, and %3$d others are attending.</string>
    <string name="CRA_invitation_prompt">Want to invite them?</string>
    <string name="CRA_calendar_reminders_pref_title">Calendar assistant</string>
    <string name="CRA_calendar_reminders_pref_desc_enabled">Tasks will remind you about upcoming calendar events and prompt you to prepare for them</string>
    <string name="CRA_share_list_title">Share the list?</string>
    <string name="CRA_invite_attendees">Invite attendees</string>
    <string name="CRA_more_options">More options</string>
    <string name="CRA_dont_invite">No thank you</string>
    <string name="CRA_list_created_title">List created!</string>
    <string name="CRA_default_list_name">Action Items: %s</string>
    <string name="none">None</string>
    <string name="EPr_appearance_header">Appearance</string>
    <string name="EPr_filters_to_show_title">Filters to show</string>
    <string name="EPr_edit_screen_options">Edit screen options</string>
    <string name="EPr_show_timer_shortcut">Show timer shortcut</string>
    <string name="EPr_beastMode_desc">Customize the layout of the task edit screen</string>
    <string name="EPr_beastMode_reset">Reset to defaults</string>
    <string name="EPr_beastMode_hint">Customize your task edit screen by dragging the left handle on each row</string>
    <string name="EPr_fullTask_title">Show full task title</string>
    <string name="EPr_show_task_edit_comments">Show comments in task edit</string>
    <string name="task_list_options">Task list options</string>
    <string name="EPr_cal_end_or_start_at_due_time">Calendar event time</string>
    <string name="EPr_cal_end_at_due_time">End calendar events at due time</string>
    <string name="EPr_cal_start_at_due_time">Start calendar events at due time</string>
    <string name="EPr_manage_header">Manage old tasks</string>
    <string name="EPr_manage_delete_completed">Delete completed tasks</string>
    <string name="EPr_manage_delete_completed_message">Do you really want to delete all your completed tasks?</string>
    <string name="EPr_manage_delete_completed_status">Deleted %d tasks!</string>
    <string name="EPr_manage_purge_deleted">Purge deleted tasks</string>
    <string name="EPr_manage_purge_deleted_message">Do you really want to purge all your deleted tasks?\n\nThese tasks will be gone forever!</string>
    <string name="EPr_manage_purge_deleted_status">Purged %d tasks!</string>
    <string name="EPr_reset_preferences">Reset preferences</string>
    <string name="EPr_reset_preferences_warning">Preferences will be reset to default values</string>
    <string name="EPr_delete_task_data">Delete task data</string>
    <string name="EPr_delete_task_data_warning">All tasks will be permanently deleted</string>
    <string name="EPr_manage_delete_completed_gcal">Delete calendar events for completed tasks</string>
    <string name="EPr_manage_delete_completed_gcal_message">Do you really want to delete all your events for completed tasks?</string>
    <string name="EPr_manage_delete_completed_gcal_status">Deleted %d calendar events!</string>
    <string name="EPr_manage_delete_all_gcal">Delete all calendar events for tasks</string>
    <string name="EPr_manage_delete_all_gcal_message">Do you really want to delete all your events for tasks?</string>
    <string name="EPr_manage_delete_all_gcal_status">Deleted %d calendar events!</string>
    <string name="TWi_loading">Loading...</string>
    <string name="WCA_title">Select tasks to view...</string>
  <string name="DB_corrupted_body">
      Uh oh! It looks like you may have a corrupted database. 
      If you see this error regularly, we suggest you clear all
      data (Settings->Sync and backup->Manage old tasks->Clear all data) and restore
      your tasks from a backup (Settings->Sync and backup->Backup->Import tasks) in Tasks.</string>
    <string name="task_defaults">Task defaults</string>
    <string name="EPr_default_urgency_title">Default deadline</string>
    <string name="EPr_default_importance_title">Default priority</string>
    <string name="EPr_default_hideUntil_title">Default hide until</string>
    <string name="EPr_default_reminders_title">Default reminders</string>
    <string name="EPr_default_addtocalendar_title">Default add to calendar</string>
    <string name="EPr_default_reminders_mode_title">Default ring/vibrate type</string>
    <string name="CFA_help">Long press on items for additional options</string>
    <string name="CFA_button_add">Add Criteria</string>
    <string name="gtasks_GTA_clear_completed">Clear Completed</string>
    <string name="premium_record_audio">Record a note</string>
    <string name="new_tag">New Tag</string>
    <string name="EPr_voiceInputEnabled_title">Voice input</string>
    <string name="delete_task">Delete task</string>
    <string name="notifications">Notifications</string>
    <string name="attachment_directory">Attachment directory</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="synchronization">Synchronization</string>
    <string name="source_code">Source code</string>
    <string name="translations">Translations</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="help_and_feedback">Help &amp; Feedback</string>
    <string name="contact_developer">Contact developer</string>
    <string name="rate_tasks">Rate Tasks</string>
    <string name="TLA_menu_donate">Donate</string>
    <string name="tag_settings">Tag Settings</string>
</resources>