<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/EPr_appearance_header"
        android:title="@string/EPr_appearance_header" />

    <Preference
        android:key="@string/notifications"
        android:title="@string/notifications" />

    <Preference android:title="@string/task_defaults">
        <intent
            android:targetClass="com.todoroo.astrid.core.DefaultsPreferences"
            android:targetPackage="org.tasks" />
    </Preference>

    <Preference
        android:key="@string/synchronization"
        android:title="@string/synchronization">
        <intent
            android:targetClass="com.todoroo.astrid.gtasks.GtasksPreferences"
            android:targetPackage="org.tasks" />
    </Preference>

    <Preference android:title="@string/backup_BPr_header">
        <intent
            android:targetClass="org.tasks.preferences.BackupPreferences"
            android:targetPackage="org.tasks" />
    </Preference>

    <Preference android:title="@string/EPr_manage_header">
        <intent
            android:targetClass="com.todoroo.astrid.core.OldTaskPreferences"
            android:targetPackage="org.tasks" />
    </Preference>

    <Preference android:title="@string/miscellaneous">
        <intent
            android:targetClass="org.tasks.preferences.MiscellaneousPreferences"
            android:targetPackage="org.tasks" />
    </Preference>

    <PreferenceCategory android:title="@string/help_and_feedback">

        <Preference
            android:key="@string/TLA_menu_donate"
            android:title="@string/TLA_menu_donate">
            <intent
                android:targetClass="org.tasks.activities.DonationActivity"
                android:targetPackage="org.tasks" />
        </Preference>

        <Preference android:title="@string/source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/abaker/tasks" />
        </Preference>

        <Preference android:title="@string/translations">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/abaker/tasks/wiki/Translations" />
        </Preference>

        <Preference android:title="@string/report_an_issue">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/abaker/tasks/issues" />
        </Preference>

        <Preference
            android:key="@string/rate_tasks"
            android:title="@string/rate_tasks">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=org.tasks" />
        </Preference>

        <Preference
            android:key="@string/contact_developer"
            android:title="@string/contact_developer" />

    </PreferenceCategory>

</PreferenceScreen>