<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tasks="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_save"
        android:title="@string/TEA_menu_save"
        android:icon="?attr/ic_action_save"
        android:visible="false"
        tasks:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_attach"
        android:title="@string/premium_attach_file"
        android:icon="?attr/ic_action_new_attachment"
        tasks:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_record_note"
        android:title="@string/premium_record_audio"
        android:icon="?attr/ic_action_mic"
        tasks:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_discard"
        android:title="@string/TEA_menu_discard_changes"
        tasks:showAsAction="never"/>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete_task"
        tasks:showAsAction="never"/>
</menu>