<?xml version="1.0" encoding="utf-8"?>
<!-- 
** Copyright (c) 2012 Todoroo Inc
**
** See the file "LICENSE" for the full license governing this code. 
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="?attr/asContentBackground">

    <include layout="@layout/toolbar" />

    <include layout="@layout/toolbar_separator" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tag_label"
            style="@style/TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/name" />

        <EditText
            android:id="@+id/tag_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tag_label"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:hint="@string/enter_filter_name"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="?attr/asTextColorHint"
            android:textColorHint="?attr/asTextColorHint"
            android:textSize="15sp" />
    </RelativeLayout>

    <!-- List -->
    <ListView android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:cacheColorHint="#00000000"/>
    
    <!-- help text -->
    <TextView android:id="@+id/help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="5dip"
        android:text="@string/CFA_help"
        style="@style/TextAppearance"/>
    
    <!-- buttons -->
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dip"
      android:padding="5dip"
      android:baselineAligned="false">
      
      <Button android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:layout_marginRight="3dip"
        android:layout_weight="1"
        android:text="@string/CFA_button_add" />

    </LinearLayout>
    
</LinearLayout>
    
