<?xml version="1.0" encoding="utf-8"?>
<!-- 
** Copyright (c) 2012 Todoroo Inc
**
** See the file "LICENSE" for the full license governing this code. 
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginLeft="10dip"
  android:layout_marginRight="10dip"
  android:background="@drawable/reminder_dialog_background"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dip"
    android:layout_marginBottom="15dip"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="5dp"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="5dip"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/reminder_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginTop="1dip"
      android:text="@string/CRA_title"
      android:textColor="@android:color/white"
      android:textSize="24sp"/>
    <ImageView
      android:id="@+id/dismiss"
      android:layout_width="25dip"
      android:layout_height="25dip"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_close_24dp"
      android:tint="@android:color/white"/>

  </LinearLayout>

  <FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dip"
      android:layout_marginStart="2dp"
      android:layout_marginEnd="5dp"
      android:layout_marginLeft="2dip"
      android:layout_marginRight="5dip"
      android:gravity="bottom"
      android:orientation="horizontal">
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher_blue"/>


      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dip"
        android:background="@drawable/speech_bubble_reminder"
        android:gravity="center_vertical"
        android:minHeight="60dip">
        <TextView
          android:id="@+id/reminder_message"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:textColor="#000000"
          android:textSize="16sp"/>
      </LinearLayout>
    </LinearLayout>
  </FrameLayout>

  <TextView
    android:id="@+id/create_list"
    android:layout_width="fill_parent"
    android:layout_height="35dip"
    android:layout_marginBottom="10dip"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:gravity="center"
    android:text="@string/new_tag"
    android:textColor="@android:color/white"
    android:textSize="24sp"/>

  <TextView
    android:id="@+id/postpone"
    android:layout_width="fill_parent"
    android:layout_height="35dip"
    android:layout_marginBottom="10dip"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:background="#707070"
    android:gravity="center"
    android:text="@string/CRA_postpone"
    android:textColor="@android:color/white"
    android:textSize="24sp"/>

  <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dip"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip">

    <TextView
      android:id="@+id/ignore"
      android:layout_width="fill_parent"
      android:layout_height="35dip"
      android:background="#707070"
      android:gravity="center"
      android:text="@string/CRA_ignore"
      android:textColor="@android:color/white"
      android:textSize="24sp"/>

    <ImageView
      android:id="@+id/ignore_settings"
      android:layout_width="35dip"
      android:layout_height="35dip"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:padding="4dip"
      android:background="@android:color/transparent"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_settings_24dp"
      android:tint="@android:color/white"/>
  </RelativeLayout>


</LinearLayout>
